<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_centerInParent="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="123dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="123dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/check">
        </ImageView>
        <com.example.adeb.Widget.Segow_UI_Bold_Font
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Verify2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <com.example.adeb.Widget.Segow_UI_Semi_Font
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/verifyText2"
            android:textAlignment="center"
            android:textColor="@color/ItemText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.example.adeb.Widget.Segow_UI_Semi_Font
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Continue2"
            android:textAlignment="center"
            android:textColor="@color/ItemText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <Button
            android:id="@+id/buttonOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_background"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="#FFF" />
    </LinearLayout>

</RelativeLayout>