<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_close"
            android:layout_gravity="right"
            android:padding="15dp">

        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Choosedriver"
            android:textColor="@color/ItemText"
            android:textSize="16dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

        </TextView>

        <ImageView
            android:id="@+id/favrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_3810"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Favorite"
            android:textColor="@color/ItemText"
            android:textSize="14dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

        </TextView>


        <ImageView
            android:id="@+id/automatically"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_3811"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Automatically"
            android:textColor="@color/ItemText"
            android:textSize="14dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

        </TextView>

    </LinearLayout>
</RelativeLayout>