<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.SignUPActivity">




            <LinearLayout
                android:id="@+id/layot1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:layout_marginTop="150dp"
                android:paddingRight="40dp">

                <EditText
                    android:id="@+id/name"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:background="@drawable/edit_text_boarder"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:hint="@string/Name"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14dp">

                </EditText>

                <EditText
                    android:id="@+id/phone"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:background="@drawable/edit_text_boarder"
                    android:drawableStart="@drawable/ic_phone"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/MobileNo"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14dp">

                </EditText>

                <EditText
                    android:id="@+id/email"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:background="@drawable/edit_text_boarder"
                    android:drawableStart="@drawable/ic_mail"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14dp">

                </EditText>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/t_password"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="10dp"
                    app:boxBackgroundColor="@color/transparent"
                    app:boxBackgroundMode="none"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/pswd"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_boarder"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="10dp"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textCursorDrawable="@drawable/curcos"
                        android:textSize="14dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/layot1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout2"
                    android:layout_below="@+id/layot1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/check_box"
                        android:layout_width="wrap_content"
                        android:clickable="true"
                        android:layout_height="20dp">

                    </CheckBox>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/byclick"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10dp">

                    </TextView>

                    <TextView
                        android:id="@+id/terms"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Terms"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10dp">

                    </TextView>
                </LinearLayout>


                <Button
                    android:id="@+id/signUp_btt"
                    android:layout_below="@id/layout2"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="17dp"
                    android:background="@drawable/button_background"
                    android:text="@string/Signup"
                    android:textAllCaps="false"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:textColor="@color/white">

                </Button>

                <LinearLayout
                    android:layout_below="@id/signUp_btt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/AlreadyLogin"
                        android:textColor="@color/forgot"
                        android:textSize="16dp">

                    </TextView>

                    <TextView
                        android:id="@+id/al_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:text="@string/Login"
                        android:textColor="@color/SolidBlack"
                        android:textSize="16dp">

                    </TextView>
                </LinearLayout>
            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_mask_group_7" />


    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/white">

        <com.victor.loading.rotate.RotateLoading
            android:id="@+id/rotateloading"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            app:loading_color="@color/colorPrimary"
            app:loading_speed="11"
            app:loading_width="2dp" />
    </RelativeLayout>
</RelativeLayout>