<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_up_arrow"
                android:padding="15dp"/>

            <com.example.adeb.Widget.Segow_UI_Bold_Font
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GearType"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/forgot"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_car_1"/>
                
                <com.example.adeb.Widget.Segow_UI_Semi_Font
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Small"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textSize="12dp"
                    android:gravity="center"
                    android:textColor="@color/txt2"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@+id/l1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_surface_1"/>

                <com.example.adeb.Widget.Segow_UI_Semi_Font
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Medium"
                    android:gravity="center_horizontal"
                    android:textSize="12dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/txt2"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/l3"
                android:layout_toRightOf="@id/l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_race_car"/>

                <com.example.adeb.Widget.Segow_UI_Semi_Font
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Large"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/txt2"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/l4"
                android:layout_toRightOf="@+id/l3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_car_2"/>

                <com.example.adeb.Widget.Segow_UI_Semi_Font
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Luxury"
                    android:textSize="12dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/txt2"/>
            </LinearLayout>
           
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:background="@color/forgot"/>

        <LinearLayout
            android:paddingTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_05_transmission"/>
                <com.example.adeb.Widget.Segow_UI_Semi_Font
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Manual"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@color/line"/>
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:background="@drawable/gear_box_background"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_return"/>
                <com.example.adeb.Widget.Segow_UI_Semi_Font
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Automatic"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gearBox"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="18dp"
            android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_background"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_centerVertical="true"/>

        </RelativeLayout>
        
    </LinearLayout>
</RelativeLayout>